force-app/main/default/objects/Feature_Access__mdt/Feature_Access__mdt.object-meta.xml
<CustomObject>
    <label>Feature Access</label>
    <pluralLabel>Feature Access</pluralLabel>
</CustomObject>