force-app/main/default/objects/Feature_Access__mdt/fields/feature_Name__c.field-meta.xml
<CustomField>
    <fullName>feature_Name__c</fullName>
    <label>feature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>