force-app/main/default/objects/Feature_Access__mdt/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <label>User Profile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>