force-app/main/default/objects/Feature_Access__mdt/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>