force-app/main/default/objects/Feature_Access__mdt/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>userId</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>